apps/cluster-based/shared/05-grafana/grafana.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tanzu-system-monitoring
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: grafana
  name: grafana-httpproxy
  namespace: tanzu-system-monitoring
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: grafana
      port: 80
  virtualhost:
    fqdn: grafana.shared.h2o-4-1384.h2o.vmware.com
